List slider arrow only visibility fix2

--- a/styles/Title.module.scss
+++ b/styles/Title.module.scss
@@ -100,6 +100,8 @@
           min-width: 300px;
           min-height: 450px;
           box-shadow: 0px 20px 30px black;
+          background: black;
+          border-radius: 14px;
           margin: 0 auto;
 
           img{
